# Aurora-AI

./: .gitignore  README.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/audio/: kokoro.py  transcribe.py  tts.py  voices.py
backend/app/core/: celery_app.py  config.py  security.py
backend/app/db/: base.py  session.py
backend/app/generators/: base.py  model_catalog.py  registry.py
backend/app/media/: export_runner.py  ffmpeg_pipeline.py  ocr.py  video_frames.py
backend/app/schemas/: admin.py  asset.py  audit.py  auth.py  billing.py  blog.py  commerce.py  detect.py  dmca.py  edit_layer.py  export.py  generation.py  health.py  job.py  listing.py  project.py  report.py  timeline.py  user.py
backend/requirements/: app.txt  base.txt  dev.txt  gpu.txt  tts-kokoro.txt
backend/tests/: conftest.py  test_admin.py  test_admin_blog.py  test_admin_finance.py  test_admin_marketplace_moderation.py  test_admin_users.py  test_assets.py  test_audio_jobs.py  test_audit.py  test_auth.py  test_blog.py  test_bulk_moderation.py  test_commerce.py  test_content_safety.py  test_cuda_editor.py  test_detect.py  test_dmca.py  test_editor_engines.py  test_edits.py  test_export.py  test_gdpr.py  test_generation_safety_and_billing.py  test_generators.py  test_health.py  test_jobs.py  test_listing_engagement.py  test_listings.py  test_marketplace.py  test_model_catalog.py  test_projects.py  test_reports.py  test_roles.py  test_system_health.py  test_timeline.py  test_tts_engine.py
(+342 files in other folders)
