[project]
name = "aurora-backend"
version = "0.1.0"
description = "Aurora — AI video generation platform backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:.*'crypt' is deprecated.*:DeprecationWarning",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/db/migrations/*" = ["F401"]
